refactor: migrate to ID-based grouping and implement Section 7 (#18)
* refactor: migrate to ID-based grouping and implement Section 7

This commit introduces a major overhaul of the data processing pipeline
to resolve inconsistencies caused by using field names as keys.

Core Changes:
- [Aggregator] Switched grouping logic from 'fieldName' to 'fieldId'.
  Centralized data preparation to serve both Operation and TechJournal mappers.
- [Mapper] Updated TechJournal and Operation mappers to consume ID-grouped data.
- [Model] Added 'fieldId' support to domain models for better traceability.

New Features:
- [PDF] Implemented Section 7 (Working operators, Machinery and Aggregates).

* refactor: improved data aggregation and DTO safety

- Add null-safe comparator for mTime sorting to prevent NPE
- Optimize RawNote parsing by skipping blank source IDs
- Remove setHeaderRows for headerless table in PdfUIHelper
- Avoid silently ignoring NFE by logging invalid source IDs
- Deduplicate validation logic already covered by RawOperationData::isValid
- Remove unused NOT_AVAILABLE constant in MachineDictionary
- Remove unused getMachineFullTitle in MachineDictionary. MachineResource.getFullTitle() is used instead.
- Extract String sanitization logic into StringUtils utility class
- Use Stream API in getFullTitle to handle empty/null fields and fix spacing

* fix: misspell in StringUtils.clean method

* refactor: make year extraction robust and fieldId private